Modified DemDownloader to opiontally download USGS10m 3DEP otherwise defaults to SRTM.  To download 3DEP, need enterprise paid API key.